--- a/app/src/main/res/layout/activity_add_edit_note.xml
+++ b/app/src/main/res/layout/activity_add_edit_note.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/editNoteTitle"
         android:layout_margin="10dp"
+        android:singleLine="true"
         android:hint="Enter Note Title"
         android:textColor="@color/white"
         android:layout_alignParentTop="true"
@@ -25,7 +26,7 @@
         android:layout_margin="10dp"
         android:hint="Enter Note Description"
         android:gravity="start"
-        android:inputType="textImeMultiLine"
+        android:inputType="textMultiLine"
         android:textColor="@color/white"
         android:layout_below="@+id/editNoteTitle"
         android:layout_above="@+id/addButton"
