--- a/app/src/main/res/layout/activity_add_edit_note.xml
+++ b/app/src/main/res/layout/activity_add_edit_note.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/add_edit_note_theme"
     tools:context=".AddEditNoteActivity">
 
     <EditText
+        android:id="@+id/editNoteTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/editNoteTitle"
-        android:layout_margin="10dp"
-        android:singleLine="true"
-        android:hint="Enter Note Title"
-        android:textColor="@color/black"
         android:layout_alignParentTop="true"
-        android:textColorHint="@color/light_white"/>
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:hint="Enter Note Title"
+        android:minHeight="48dp"
+        android:singleLine="true"
+        android:textColor="@color/black"
+        android:textColorHint="@color/light_white" />
 
     <EditText
         android:id="@+id/editNoteDescription"
@@ -41,6 +45,7 @@
         android:backgroundTint="@color/purple_500"
         android:layout_margin="20dp"
         android:padding="5dp"/>
+
 
 
 </RelativeLayout>
