--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,8 +22,10 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/teal_200"
         android:src="@drawable/ic_addnote"
+        android:tooltipText="Add New Note"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_margin="20dp" />
+
 </RelativeLayout>
 </layout>
